--- a/pages/servicioalcliente.html
+++ b/pages/servicioalcliente.html
@@ -45,12 +45,12 @@
     <section>
         <nav class="lista">
             <ul>
-                <li><a href="mujer">Mujer</a></li>
-                <li><a href="hombre">Hombre</a></li>
-                <li><a href="bebé">Bebé</a></li>
-               <li><a href="niños">Niños</a></li>
-                <li><a href="sport">Sport</a></li>
-                <li><a href="sale">Sale</a></li>
+                <li><a href="#">Mujer</a></li>
+                <li><a href="#">Hombre</a></li>
+                <li><a href="#">Bebé</a></li>
+               <li><a href="#">Niños</a></li>
+                <li><a href="#">Sport</a></li>
+                <li><a href="#">Sale</a></li>
             </ul>     
         </nav>
     </section>
