correccion de imagenes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav> 
      <section>
         <div class="adonis">
-            <div class="adonis__logo"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+            <div class="adonis__logo"><img src="AbrilRuiz14/NuevorepoDesarrolloweb/img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
         </div>
     </section>
     <section>
