correccion de vinculo en paginas

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header> 
         <nav class="navbar">
             <ul>
-                <li><a href="inicio">Inicio</a></li>
-                <li><a href="servicioalcliente.html">Servicio al cliente</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="AbrilRuiz14/NuevorepoDesarrolloweb/pages/servicioalcliente.html">Servicio al cliente</a></li>
                 <li><a href="nuestrastiendas.html">Nuestras tiendas</a></li>
                 <li class="navbar__derecha"><a href="micuenta.html">Mi cuenta</a></li>
                 <li class="navbar__derecha"><a href="favoritos.html">Favoritos</a></li>
