correccion de imagenes final

--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -21,7 +21,7 @@
         </nav> 
      <section>
         <div class="adonis">
-            <div class="adonis__logo"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+            <div class="adonis__logo"><img src="img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
         </div>
     </section>
 
@@ -75,12 +75,12 @@
         </div>
     
         <div class="iconos">
-            <div class="iconos__redes"><img src="imagenes/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
-            <div class="iconos__redes"><img src="imagenes/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
-            <div class="iconos__redes"><img src="imagenes/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
         </div>
         <div class="logo">
-            <div class="logo__final"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+            <div class="logo__final"><img src="img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
         </div>
        </footer>
 
