--- a/pages/nuestrastiendas.html
+++ b/pages/nuestrastiendas.html
@@ -26,7 +26,7 @@
         </nav> 
      <section>
         <div class="adonis">
-            <div class="adonis__logo"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+            <div class="adonis__logo"><img src="img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
         </div>
     </section>
     <section>
@@ -59,7 +59,7 @@
 
     <section>
         <div class="tiendas">
-            <div class="tiendas__imagen"><img src="imagenes/tiendas-de-ropa-y-retail-como-favorece-el-diseno-a-la-decision-de-compra-022-studio-scaled.jpg" alt="Tienda_de_ropa" width="100%" height="200px"></div>
+            <div class="tiendas__imagen"><img src="img/tiendas-de-ropa-y-retail-como-favorece-el-diseno-a-la-decision-de-compra-022-studio-scaled.jpg" alt="Tienda_de_ropa" width="100%" height="200px"></div>
         </div>
     </section>
     <section>
@@ -81,12 +81,12 @@
         </div>
     
         <div class="iconos">
-            <div class="iconos__redes"><img src="imagenes/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
-            <div class="iconos__redes"><img src="imagenes/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
-            <div class="iconos__redes"><img src="imagenes/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
         </div>
         <div class="logo">
-            <div class="logo__final"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+            <div class="logo__final"><img src="img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
         </div>
        </footer>
     
