--- a/pages/servicioalcliente.html
+++ b/pages/servicioalcliente.html
@@ -26,7 +26,7 @@
         </nav> 
      <section>
         <div class="adonis">
-            <div class="adonis__logo"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+            <div class="adonis__logo"><img src="img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
         </div>
     </section>
 
@@ -63,29 +63,29 @@
     <section>
         <div class="tarjetasayuda">
             <div class="tarjetas__ayuda1">
-                <img src="imagenes/images.png" alt="computadora" width="50px" height="50px">
+                <img src="img/images.png" alt="computadora" width="50px" height="50px">
                 <p>ENVÍOS</p>
             </div>
             <div class="tarjetas__ayuda2">
-                <img src="imagenes/vector-credit-card-icon.jpg" alt="tarjeta" width="50px" height="50px">
+                <img src="img/vector-credit-card-icon.jpg" alt="tarjeta" width="50px" height="50px">
                 <p>PAGOS</p>
             </div>
             <div class="tarjetas__ayuda3">
-                <img src="imagenes/7132913.png" alt="devolución" width="50px" height="50px">
+                <img src="img/7132913.png" alt="devolución" width="50px" height="50px">
                 <p>DEVOLUCIONES</p>
             </div>
             <div class="tarjetas__ayuda4">
-                <img src="imagenes/android-call_icon-icons.webp" alt="telefono" width="50px" height="50px">
+                <img src="img/android-call_icon-icons.webp" alt="telefono" width="50px" height="50px">
                 <p>CONTÁCTANOS</p>
             </div>
         </div>
         <div class="ayudatarjetas">
             <div class="ayuda__tarjetas1">
-                <img src="imagenes/pngtree-shop-icon-png-image_1820095.jpg" alt="tienda" width="50px" height="50px">
+                <img src="img/pngtree-shop-icon-png-image_1820095.jpg" alt="tienda" width="50px" height="50px">
                 <p>TIENDAS</p>
             </div>
             <div class="ayuda__tarjetas2">
-                <img src="imagenes/pngtree-shop-icon-png-image_1820095.jpg" alt="tienda" width="50px" height="50px">
+                <img src="img/pngtree-shop-icon-png-image_1820095.jpg" alt="tienda" width="50px" height="50px">
                 <p>RETIRO EN TIENDA</p>
             </div>
         </div>
@@ -100,12 +100,12 @@
         </div>
     
         <div class="iconos">
-            <div class="iconos__redes"><img src="imagenes/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
-            <div class="iconos__redes"><img src="imagenes/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
-            <div class="iconos__redes"><img src="imagenes/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
+            <div class="iconos__redes"><img src="img/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
         </div>
         <div class="logo">
-            <div class="logo__final"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+            <div class="logo__final"><img src="img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
         </div>
        </footer>
 
