--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 
     <section>
         <div class="perchero">
-           <div class="perchero__imagen"><img src="imagenes/istockphoto-1492815833-612x612.jpg" alt="Perchero_con_ropa" width="100%" height="200px"></div>
+           <div class="perchero__imagen"><img src="img/istockphoto-1492815833-612x612.jpg" alt="Perchero_con_ropa" width="100%" height="200px"></div>
         </div>
     </section>
 
       <section>
         <h1 class="aprovecha animate__heartBeat">Aprovecha los mejores descuentos</h1>
         <div class="articulos">
-            <div class="articulo__imagen"><img src="imagenes/Mono de espalda con cordón con abertura de cintura con cordón.jpeg" alt="mono_de_vestir_rosa" width="80px" height="90px"></div>
-            <div class="articulo__imagen"><img src="imagenes/Novedades para Niños _ Moda Novedades para Niños.jpeg" alt="conjunto_negro" width="80px" height="90px"> </div>
-            <div class="articulo__imagen"><img src="imagenes/Vestido ajustado con espalda abierto.jpeg" alt="vestido_celeste" width="80px" height="90px"></div>
-            <div class="articulo__imagen"> <img src="imagenes/Vestido de tirante línea A de espalda con cordón con estampado de girasol al azar.jpeg" alt="vestido_con_girasoles" width="80px" height="90px"></div>
+            <div class="articulo__imagen"><img src="img/Mono de espalda con cordón con abertura de cintura con cordón.jpeg" alt="mono_de_vestir_rosa" width="80px" height="90px"></div>
+            <div class="articulo__imagen"><img src="img/Novedades para Niños _ Moda Novedades para Niños.jpeg" alt="conjunto_negro" width="80px" height="90px"> </div>
+            <div class="articulo__imagen"><img src="img/Vestido ajustado con espalda abierto.jpeg" alt="vestido_celeste" width="80px" height="90px"></div>
+            <div class="articulo__imagen"> <img src="img/Vestido de tirante línea A de espalda con cordón con estampado de girasol al azar.jpeg" alt="vestido_con_girasoles" width="80px" height="90px"></div>
         </div>
         <div class="descripcion">
             <div class="descripcion__articulos"><p>Mono rosa <br> <br>$390</p></div>
@@ -92,12 +92,12 @@
     </div>
 
     <div class="iconos">
-        <div class="iconos__redes"><img src="imagenes/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
-        <div class="iconos__redes"><img src="imagenes/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
-        <div class="iconos__redes"><img src="imagenes/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
+        <div class="iconos__redes"><img src="img/220200.png" alt="logo_de_facebook" width="30px" height="30px"></div>
+        <div class="iconos__redes"><img src="img/3938028.png" alt="logo_de_twitter" width="30px" height="30px"></div>
+        <div class="iconos__redes"><img src="img/pngtree-instagram-social-platform-icon-png-image_6315976.png" alt="logo_de_instagram" width="30px" height="30px"></div>
     </div>
     <div class="logo">
-        <div class="logo__final"><img src="imagenes/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
+        <div class="logo__final"><img src="img/Adonis.png" alt="Logo__Adonis" width="300px" height="200px"></div>
     </div>
    </footer>
 
