corrrecion de vinculos

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="pages/servicioalcliente.html">Servicio al cliente</a></li>
-                <li><a href="nuestrastiendas.html">Nuestras tiendas</a></li>
-                <li class="navbar__derecha"><a href="micuenta.html">Mi cuenta</a></li>
-                <li class="navbar__derecha"><a href="favoritos.html">Favoritos</a></li>
-                <li class="navbar__derecha"><a href="carrito.html">Carrito</a></li>
+                <li><a href="pages/nuestrastiendas.html">Nuestras tiendas</a></li>
+                <li class="navbar__derecha"><a href="pages/micuenta.html">Mi cuenta</a></li>
+                <li class="navbar__derecha"><a href="pages/favoritos.html">Favoritos</a></li>
+                <li class="navbar__derecha"><a href="pages/carrito.html">Carrito</a></li>
             </ul>
         </nav> 
      <section>
