--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <h1 class="aprovecha animate__heartBeat">Aprovecha los mejores descuentos</h1>
         <div class="articulos">
             <div class="articulo__imagen"><img src="img/Mono de espalda con cordón con abertura de cintura con cordón.jpeg" alt="mono_de_vestir_rosa" width="80px" height="90px"></div>
+            <div class="descripcion__articulos"><p>Mono rosa <br> <br>$390</p></div>
             <div class="articulo__imagen"><img src="img/Novedades para Niños _ Moda Novedades para Niños.jpeg" alt="conjunto_negro" width="80px" height="90px"> </div>
             <div class="articulo__imagen"><img src="img/Vestido ajustado con espalda abierto.jpeg" alt="vestido_celeste" width="80px" height="90px"></div>
             <div class="articulo__imagen"> <img src="img/Vestido de tirante línea A de espalda con cordón con estampado de girasol al azar.jpeg" alt="vestido_con_girasoles" width="80px" height="90px"></div>
