--- a/micuenta.html
+++ b/micuenta.html
@@ -53,7 +53,17 @@
     <div>
         <h1 class="cuenta">Mi cuenta</h1>
     </div>
-    
+
+    <section class="form-register">
+        <h4>Registrarse</h4>
+        <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su nombre">
+        <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su apellido">
+        <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
+        <input class="controls" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su contraseña">
+        <p>Estoy de acuerdocon <a href="#">Terminos y Condiciones</a></p>
+        <input class="botons" type="submit" value="Registrar">
+        <p><a href="#">¿Ya tengo Cuenta?</a></p>
+    </section>
 
     <footer class="footer">
         <div class="coleccion">
