coreccion de clases repetidas

--- a/carrito.html
+++ b/carrito.html
@@ -57,11 +57,11 @@
 
    <section>
     <div class="tarjetacarrito">
-        <div class="tarjetacarrito__1">
+        <div class="tarjetacarrito_">
             <img src="img/107831.png" alt="carrito_de_compras" width="90px" height="90px">
         </div>
 
-         <div class="tarjetacarrito__2">
+         <div class="tarjetacarrito_">
             <h1 class="tarjetacarrito__titulo">Tu carrito esta vacio</h1>
             <p class="tarjetacarrito__parrafo">Compra productos para visualizarlos en tu carrito de compras</p>
             <button class="tarjetacarrito__button">Comprar</button>
