--- a/nuestrastiendas.html
+++ b/nuestrastiendas.html
@@ -64,12 +64,12 @@
     </section>
     <section>
         <div class="tarjetas">
-            <div class="tarjetas__tiendas1"><p class="tarjetas__tiendas__1">Tienda Adonis Shopping <br>Montevideo- calle Fray Guzman casi Uruguay- 111</p></div>
-            <div class="tarjetas__tiendas2"><p class="tarjetas__tiendas__2">Tienda Adonis Shopping Central <br>Montevideo- calle Florencio Sanchez-222 </p></div>
+            <div class="tarjetas__tiendas1"><p class="tarjetas__tiendas">Tienda Adonis Shopping <br>Montevideo- calle Fray Guzman casi Uruguay- 111</p></div>
+            <div class="tarjetas__tiendas2"><p class="tarjetas__tiendas">Tienda Adonis Shopping Central <br>Montevideo- calle Florencio Sanchez-222 </p></div>
         </div>
         <div class="tarjetasabajo">
-            <div class="tarjetas__abajo1"><p class="tarjetas__abajo__1">Tienda Adonis <br>Montevideo- calle San Lorenzo- 333</p></div>
-            <div class="tarjetas__abajo2"><p class="tarjetas__abajo__2">Tienda Adonis Maldonado <br>Maldonado- calle Colón- 444</p></div>
+            <div class="tarjetas__abajo1"><p class="tarjetas__abajo">Tienda Adonis <br>Montevideo- calle San Lorenzo- 333</p></div>
+            <div class="tarjetas__abajo2"><p class="tarjetas__abajo">Tienda Adonis Maldonado <br>Maldonado- calle Colón- 444</p></div>
         </div>
     </section>
 
