--- a/servicioalcliente.html
+++ b/servicioalcliente.html
@@ -61,29 +61,29 @@
 
     <section>
         <div class="tarjetasayuda">
-            <div class="tarjetas__ayuda1">
+            <div class="tarjetas__ayuda">
                 <img src="img/images.png" alt="computadora" width="50px" height="50px">
                 <p>ENVÍOS</p>
             </div>
-            <div class="tarjetas__ayuda2">
+            <div class="tarjetas__ayuda">
                 <img src="img/vector-credit-card-icon.jpg" alt="tarjeta" width="50px" height="50px">
                 <p>PAGOS</p>
             </div>
-            <div class="tarjetas__ayuda3">
+            <div class="tarjetas__ayuda">
                 <img src="img/7132913.png" alt="devolución" width="50px" height="50px">
                 <p>DEVOLUCIONES</p>
             </div>
-            <div class="tarjetas__ayuda4">
+            <div class="tarjetas__ayuda">
                 <img src="img/android-call_icon-icons.webp" alt="telefono" width="50px" height="50px">
                 <p>CONTÁCTANOS</p>
             </div>
         </div>
         <div class="ayudatarjetas">
-            <div class="ayuda__tarjetas1">
+            <div class="ayuda__tarjetas">
                 <img src="img/pngtree-shop-icon-png-image_1820095.jpg" alt="tienda" width="50px" height="50px">
                 <p>TIENDAS</p>
             </div>
-            <div class="ayuda__tarjetas2">
+            <div class="ayuda__tarjetas">
                 <img src="img/pngtree-shop-icon-png-image_1820095.jpg" alt="tienda" width="50px" height="50px">
                 <p>RETIRO EN TIENDA</p>
             </div>
